@@ -24,8 +24,8 @@
  * Information about TAO is available at:
  *     http://www.cs.wustl.edu/~schmidt/TAO.html
  **/
-#ifndef CIAO__________TUTORIAL_CODE_SHAPES_CONTROL_COMP_SHAPES_CONTROL_COMP_EXEC_ALHSLR_H_
-#define CIAO__________TUTORIAL_CODE_SHAPES_CONTROL_COMP_SHAPES_CONTROL_COMP_EXEC_ALHSLR_H_
+#ifndef CIAO__________TUTORIAL_CODE_SHAPES_CONTROL_COMP_SHAPES_CONTROL_COMP_EXEC_CUJIE3_H_
+#define CIAO__________TUTORIAL_CODE_SHAPES_CONTROL_COMP_SHAPES_CONTROL_COMP_EXEC_CUJIE3_H_
 
 #include /**/ "ace/pre.h"
 
@@ -39,7 +39,7 @@
 
 namespace CIAO_Shapes_Control_comp_Impl
 {
-  
+
   class  Control_comp_exec_i
     : public virtual Control_comp_Exec,
       public virtual ::CORBA::LocalObject
@@ -47,110 +47,84 @@ namespace CIAO_Shapes_Control_comp_Impl
   public:
     Control_comp_exec_i (void);
     virtual ~Control_comp_exec_i (void);
-    
+
     //@{
     /** Supported operations and attributes. */
-    
+
     //@}
-    
+
     //@{
     /** Component attributes and port operations. */
     
-    
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
-    
     virtual ::CORBA::ULong
     rate (void);
-    
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
     
     virtual void
     rate (
       ::CORBA::ULong rate);
     
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
-    
     virtual ::CORBA::UShort
     max_x (void);
-    
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
     
     virtual void
     max_x (
       ::CORBA::UShort max_x);
     
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
-    
     virtual ::CORBA::UShort
     max_y (void);
-    
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
     
     virtual void
     max_y (
       ::CORBA::UShort max_y);
     
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
-    
     virtual ::CORBA::UShort
     max_size (void);
-    
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
     
     virtual void
     max_size (
       ::CORBA::UShort max_size);
     
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
-    
     virtual ::CORBA::Boolean
     resize_shape (void);
-    
-    // TAO_IDL - Generated from
-    // be/be_visitor_operation/operation_ch.cpp:36
     
     virtual void
     resize_shape (
       ::CORBA::Boolean resize_shape);
     //@}
-    
+
     //@{
     /** Operations from Components::SessionComponent. */
-    
+
     virtual void set_session_context (::Components::SessionContext_ptr ctx);
-    
+
     virtual void configuration_complete (void);
-    
+
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
     //@}
-  
+
+    //@{
+    /** User defined operations */
+
+    //@}
+
   private:
     ::Shapes::CCM_Control_comp_Context_var ciao_context_;
-    
+
     ::CORBA::ULong rate_;
-    
+
     ::CORBA::UShort max_x_;
-    
+
     ::CORBA::UShort max_y_;
-    
+
     ::CORBA::UShort max_size_;
-    
+
     ::CORBA::Boolean resize_shape_;
-    
+
     ACE_Reactor* reactor (void);
   };
-  
+
   extern "C"  ::Components::EnterpriseComponent_ptr
   create_Shapes_Control_comp_Impl (void);
 }
