@@ -24,8 +24,8 @@
  * Information about TAO is available at:
  *     http://www.cs.wustl.edu/~schmidt/TAO.html
  **/
-#ifndef CIAO__________TUTORIAL_CODE_SHAPES_SENDER_COMP_SHAPES_SENDER_COMP_EXEC_IGMUFJ_H_
-#define CIAO__________TUTORIAL_CODE_SHAPES_SENDER_COMP_SHAPES_SENDER_COMP_EXEC_IGMUFJ_H_
+#ifndef CIAO__________TUTORIAL_CODE_SHAPES_SENDER_COMP_SHAPES_SENDER_COMP_EXEC_WFXNF1_H_
+#define CIAO__________TUTORIAL_CODE_SHAPES_SENDER_COMP_SHAPES_SENDER_COMP_EXEC_WFXNF1_H_
 
 #include /**/ "ace/pre.h"
 
@@ -39,6 +39,7 @@
 
 namespace CIAO_Shapes_Sender_comp_Impl
 {
+
   class  control_exec_i
     : public virtual ::Shapes::CCM_Control_obj,
       public virtual ::CORBA::LocalObject
@@ -47,23 +48,24 @@ namespace CIAO_Shapes_Sender_comp_Impl
     control_exec_i (
       ::Shapes::CCM_Sender_comp_Context_ptr ctx);
     virtual ~control_exec_i (void);
-    
+
     // Operations and attributes from ::Shapes::Control_obj
-    
+
     virtual
     ::Shapes::ReturnStatus setSize (
       ::CORBA::UShort size);
-    
+
     virtual
     ::Shapes::ReturnStatus setLocation (
       ::CORBA::UShort x,
       ::CORBA::UShort y);
-  
+
   private:
     ::Shapes::CCM_Sender_comp_Context_var ciao_context_;
   };
+
   
-  
+
   class  Sender_comp_exec_i
     : public virtual Sender_comp_Exec,
       public virtual ::CORBA::LocalObject
@@ -71,37 +73,41 @@ namespace CIAO_Shapes_Sender_comp_Impl
   public:
     Sender_comp_exec_i (void);
     virtual ~Sender_comp_exec_i (void);
-    
+
     //@{
     /** Supported operations and attributes. */
-    
+
     //@}
-    
+
     //@{
     /** Component attributes and port operations. */
-    
-    
+
     virtual ::Shapes::CCM_Control_obj_ptr
     get_control (void);
     //@}
-    
+
     //@{
     /** Operations from Components::SessionComponent. */
-    
+
     virtual void set_session_context (::Components::SessionContext_ptr ctx);
-    
+
     virtual void configuration_complete (void);
-    
+
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
     //@}
-  
+
+    //@{
+    /** User defined operations */
+
+    //@}
+
   private:
     ::Shapes::CCM_Sender_comp_Context_var ciao_context_;
     ::Shapes::CCM_Control_obj_var ciao_control_;
   };
-  
+
   extern "C"  ::Components::EnterpriseComponent_ptr
   create_Shapes_Sender_comp_Impl (void);
 }
